# ChangeLog for gnome-base/gconf
# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/gnome-base/gconf/ChangeLog,v 1.179 2008/01/01 21:45:46 eva Exp $

*gconf-2.20.1-r1 (01 Jan 2008)

  01 Jan 2008; Gilles Dartiguelongue <eva@gentoo.org>
  +files/gconf-2.20.1-automagic-ldap.patch, -gconf-2.16.0.ebuild,
  -gconf-2.20.0.ebuild, +gconf-2.20.1-r1.ebuild:
  prune old releases
  add a patch to remove automagic dependency on ldap

  29 Nov 2007; Jeroen Roovers <jer@gentoo.org> gconf-2.20.1.ebuild:
  Stable for HPPA (bug #199740).

  26 Nov 2007; Markus Rothe <corsair@gentoo.org> gconf-2.20.1.ebuild:
  Stable on ppc64; bug #199740

  24 Nov 2007; Brent Baude <ranger@gentoo.org> gconf-2.20.1.ebuild:
  Marking gconf-2.20.1 ppc stable for bug 199740

  22 Nov 2007; Raúl Porcel <armin76@gentoo.org> gconf-2.20.1.ebuild:
  alpha/ia64/sparc stable wrt #199740

  21 Nov 2007; Dawid Węgliński <cla@gentoo.org> gconf-2.20.1.ebuild:
  Stable on x86 (bug #199740)

  20 Nov 2007; Samuli Suominen <drac@gentoo.org> gconf-2.20.1.ebuild:
  amd64 stable wrt #199740

*gconf-2.20.1 (17 Oct 2007)

  17 Oct 2007; Gilles Dartiguelongue <eva@gentoo.org> +gconf-2.20.1.ebuild:
  bump to 2.20.1

  25 Sep 2007; Daniel Gryniewicz <dang@gentoo.org> ChangeLog:
  New series for Gnome 2.20

  22 Sep 2007; Tom Gall <tgall@gentoo.org> gconf-2.18.0.1.ebuild:
  stable on ppc64

  28 Aug 2007; Jeroen Roovers <jer@gentoo.org> gconf-2.18.0.1.ebuild:
  Stable for HPPA (bug #185823).

  11 Aug 2007; Andrej Kacian <ticho@gentoo.org> gconf-2.18.0.1.ebuild:
  Stable on x86, bug #185823.

  10 Aug 2007; Christoph Mende <angelos@gentoo.org> gconf-2.18.0.1.ebuild:
  Stable on amd64 wrt bug #185823

  08 Aug 2007; Raúl Porcel <armin76@gentoo.org> gconf-2.18.0.1.ebuild:
  alpha/ia64 stable wrt #185823

  07 Aug 2007; Tobias Scherbaum <dertobi123@gentoo.org>
  gconf-2.18.0.1.ebuild:
  Stable on ppc wrt bug #185823.
