@@ -2,7 +2,7 @@ AUX gconf-2.20.1-automagic-ldap.patch 2360 RMD160 e25144064b0fa723966314906a011b
 DIST GConf-2.18.0.1.tar.bz2 1347765 RMD160 79bad5a19404277abfbd7f17b61e09274dcc1aa3 SHA1 6bbceafc636457ec14ec2d7b4358235ff6cf08d3 SHA256 58a738f34078de9b3906460a297e751e80a0846e4f3bf33e1884216d0da42bf1
 DIST GConf-2.20.1.tar.bz2 1404919 RMD160 743bee341731402e5d4938ee030adf4f463d9a52 SHA1 c628e2645a91b15749f1ebacc62ea685cbfa681c SHA256 0fb446b87e71fe1089f43e671b5b7689ec91d781b5b2e8f0fc72d4a83a014838
 EBUILD gconf-2.18.0.1.ebuild 2000 RMD160 4a4a03b0eedc4018cda48c8a1ad82af245f71742 SHA1 4756c255ccc7ade85b550f46169248a016be3a05 SHA256 ea7d235595494edb2060eff4337a817210ecf5b634a56d8cb4b81bfaa46fd02c
-EBUILD gconf-2.20.1-r1.ebuild 2187 RMD160 78cc91010fe8e4066505ddaa462a7db49f2e5bfc SHA1 bcf3aba9b5e819e9d504f2fbae4dd3b0c9410bc7 SHA256 4f0a28ea8c712c5a846eee28904a51da50f5765e33984167ffe371c379921308
+EBUILD gconf-2.20.1-r1.ebuild 2218 RMD160 cc6d5d0af5eaa2dade01f249146e418570b9d26a SHA1 8e02f02e911272d2787af389662a2bc113fba1e6 SHA256 c544d7b86344ac8e48affc4eb7cabba6363bec78b2e20df850c40624ab0c5af8
 EBUILD gconf-2.20.1.ebuild 2020 RMD160 c1fd2488157260d5ec6991289d98bea76345af55 SHA1 7a1f9a93683a01fbb953d739e6abfc86dc9464a7 SHA256 7b0647cef41aef827e9bcf434b5e946a9d060e336b3087e3e9be02a4e11e225a
-MISC ChangeLog 23350 RMD160 9b0af5f150b7c0862448dc176677277f5cfaef23 SHA1 9060173624c57f09d04081253c96a21b84c2c2c0 SHA256 2a64b706486a26b4fb6f16a49ac1161f9fc8a089c008ad34871f4fe42d730844
+MISC ChangeLog 23459 RMD160 388d72115c765de5ce170674d721575fc1f612ae SHA1 86ffec630c146d3e64aaa09ba5541c361470d637 SHA256 2ec70168e025fc265efffd6b5aadf2002c9de178c2c4a198156a0cdf264f4baa
 MISC metadata.xml 158 RMD160 c0e2bae8e91bb6be8922bac5e4f597302e06587e SHA1 38f78e9790bcd4382b4a49aa226aa6dda1d3a3d7 SHA256 3a7dbca0fdc557de69783e0663e2d76ddab129ea8a19b2d0ef6d3e5d1b947ce1
