@@ -1,6 +1,10 @@
 # ChangeLog for gnome-base/gconf
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-base/gconf/ChangeLog,v 1.179 2008/01/01 21:45:46 eva Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-base/gconf/ChangeLog,v 1.180 2008/01/02 07:06:17 eva Exp $
+
+  02 Jan 2008; Gilles Dartiguelongue <eva@gentoo.org>
+  gconf-2.20.1-r1.ebuild:
+  actually add the ldap use
 
 *gconf-2.20.1-r1 (01 Jan 2008)
 
